--- a/ornstein_uhlenbeck_how_to_simulate.ipynb
+++ b/ornstein_uhlenbeck_how_to_simulate.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "*If you have suggestions or questions about these notes, feel free to reach out at VaheGscience@gmail.com*. \n",
     "\n",
-    "*Last updated: 29 Aug 2024*\n",
+    "*Last updated: 11 Oct 2024*\n",
+    "\n",
+    "Updates:\n",
+    "- 11 Oct 2024 | The standard deviation of $x$-values in the next simulation time step (stored in the variable `sd`) is now computed outside the for-loop, since it does not depend on the current state and hence, remains unchanged. Thanks to the YouTube user [@BettaReturnsAhead](https://www.youtube.com/@BettaReturnsAhead) for suggesting this optimization.\n",
     "\n",
     "In this notebook, I show how to simulate the Ornstein-Uhlenbeck process using both an exact method and the approximate Euler–Maruyama method.\n",
     "\n",
@@ -107,15 +110,17 @@
     "# Array of time values\n",
     "t_arr = np.arange(n_steps) * dt\n",
     "\n",
+    "# Standard deviation of x-values after a single step (independent of the current state)\n",
+    "var = sigma**2/(2*theta) * (1 - np.exp(-2*theta*dt))\n",
+    "sd = np.sqrt(var)\n",
+    "    \n",
     "for i in range(n_steps-1):\n",
     "    \n",
     "    # Latest x-value\n",
     "    x_curr = x_arr[i]\n",
     "    \n",
-    "    # Mean and standard deviation of the next x-value\n",
+    "    # Mean of the next x-value\n",
     "    mean = x_curr * np.exp(-theta * dt) + mu * (1 - np.exp(-theta * dt))\n",
-    "    var = sigma**2/(2*theta) * (1 - np.exp(-2*theta*dt))\n",
-    "    sd = np.sqrt(var)\n",
     "    \n",
     "    # Sample the next x-value from a normal distribution\n",
     "    x_next = np.random.normal(loc = mean, scale = sd)\n",
@@ -279,16 +284,18 @@
     "    x_arr = np.zeros(n_steps)\n",
     "    x_arr[0] = x_0\n",
     "    \n",
+    "    # Standard deviation of x-values after a single step (independent of the current state)\n",
+    "    var = sigma**2/(2*theta) * (1 - np.exp(-2*theta*dt))\n",
+    "    sd = np.sqrt(var)\n",
+    "    \n",
     "    for i in range(n_steps-1):\n",
     "        \n",
     "        # Latest x-value\n",
     "        x_curr = x_arr[i]\n",
     "        \n",
-    "        # Mean and standard deviation of the next x-value\n",
+    "        # Mean of the next x-value\n",
     "        mean = x_curr * np.exp(-theta * dt) + mu * (1 - np.exp(-theta * dt))\n",
-    "        var = sigma**2/(2*theta) * (1 - np.exp(-2*theta*dt))\n",
-    "        sd = np.sqrt(var)\n",
-    "                \n",
+    "        \n",
     "        # Sample the next x-value from a normal distribution\n",
     "        x_next = np.random.normal(loc = mean, scale = sd)\n",
     "\n",
@@ -492,16 +499,19 @@
     "    # Initialize the array of x-value\n",
     "    x_arr = np.zeros(n_steps)\n",
     "    x_arr[0] = x_0\n",
+    "    \n",
+    "    # Standard deviation of x-values after a single step (independent of the current state)\n",
+    "    var = sigma**2 * dt\n",
+    "    sd = np.sqrt(var)\n",
     "\n",
+    "    \n",
     "    for i in range(n_steps-1):\n",
     "\n",
     "        # Latest x-value\n",
     "        x_curr = x_arr[i]\n",
     "\n",
-    "        # Mean and standard deviation of the next x-value\n",
+    "        # Mean of the next x-value\n",
     "        mean = x_curr - theta * dt * (x_curr - mu)\n",
-    "        var = sigma**2 * dt\n",
-    "        sd = np.sqrt(var)\n",
     "        \n",
     "        # Sample the next x-value from a normal distribution\n",
     "        x_next = np.random.normal(loc = mean, scale = sd)\n",
@@ -595,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
