minor stylistic edit

--- a/ornstein_uhlenbeck_how_to_simulate.ipynb
+++ b/ornstein_uhlenbeck_how_to_simulate.ipynb
@@ -10,7 +10,7 @@
     "*Last updated: 11 Oct 2024*\n",
     "\n",
     "Updates:\n",
-    "- 11 Oct 2024 | The standard deviation of $x$-values in the next simulation time step (stored in the variable `sd`) is now computed outside the for-loop, since it does not depend on the current state and hence, remains unchanged. Thanks to the YouTube user [@BettaReturnsAhead](https://www.youtube.com/@BettaReturnsAhead) for suggesting this optimization.\n",
+    "- 11 Oct 2024 | The standard deviation of $x$-values in the next simulation time step (stored in the variable `sd`) is now computed outside the `for`-loop, since it does not depend on the current state and hence, remains unchanged. Thanks to the YouTube user [@BettaReturnsAhead](https://www.youtube.com/@BettaReturnsAhead) for suggesting this optimization.\n",
     "\n",
     "In this notebook, I show how to simulate the Ornstein-Uhlenbeck process using both an exact method and the approximate Euler–Maruyama method.\n",
     "\n",
